<resources>
    <string name="app_name">lab_db</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="save">Save</string>
    <string name="comment">Comment</string>
    <string name="not_empty">This field should not be empty</string>
    <string name="user_saved">User was saved</string>
    <string name="search">Search</string>
    <string name="total_users_count">Records total: %1$d</string>
    <string name="filtered_users_count">Found records: %1$d</string>
    <string name="cancel">Cancel</string>
</resources>